# ruian-sample

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .prettierignore  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  webpack.config.js
.github/: dependabot.yml
.github/workflows/: build.yml
compose/deployment/: docker-compose.prod.yml  templates.yml
compose/local/app/: Dockerfile  entrypoint
compose/local/webpack/: Dockerfile
compose/prod/app/: Dockerfile  entrypoint  gunicorn.conf.py
compose/prod/webpack/: Dockerfile
config/: asgi.py  logging.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
ruian/data/: admin.py  apps.py  cuzk.py  models.py  urls.py  views.py
ruian/data/api/: serializers.py  urls.py  views.py
ruian/data/migrations/: 0001_initial.py  0002_alter_city_district.py  0003_alter_place_district.py
ruian/users/: admin.py  apps.py  managers.py
ruian/users/migrations/: 0001_initial.py
static/src/ruian/js/: RuianSampleApp.vue  index.js  utils.js
static/src/ruian/js/components/: InputLabel.vue  ReadOnlyInput.vue
static/src/ruian/scss/: main.scss
templates/: index.html
